# JJParser

./: .gitignore  CMakeLists.txt  CONN_TERM.c  Compare.c  Compare.h  DataTypes.h  Examine.c  Examine.h  FileUtilities.c  FileUtilities.h  Interpret.c  Interpret.h  List.c  List.h  ListSignature.c  ListStatistics.c  ListStatistics.h  Makefile  Modify.c  Modify.h  ParseTPTP.c  ParseTPTP.h  ParseTSTP.c  ParseTSTP.h  Parsing.c  Parsing.h  PrintDFG.c  PrintDFG.h  PrintDK.c  PrintDK.h  PrintKIF.c  PrintKIF.h  PrintLP.c  PrintLP.h  PrintOtter.c  PrintOtter.h  PrintSMT2.c  PrintSMT2.h  PrintSUMO.c  PrintSUMO.h  (+22 more)
ArchivedCode/: COMNNTERM.c
TestFiles/: Broken.p  FOOL.p  NTF.p  SMTArith1.p  TPI1.p  Tuples.p  foo.p  foo_count_tfx.p
TestFiles/FOOL/EvgenyExamples/: ite.p  let-ite.p  let-scoping.p  let-syntax.p  true-eq-false.p  true-neq-false.p  tuples.p
TestFiles/FOOL/FromTHF/: CSR119_8.p  CSR120_8.p  CSR121_8.p  CSR122_8.p  CSR124_8.p  CSR125_8.p  CSR126_8.p  CSR127_8.p  CSR128_8.p  CSR141_8.p  CSR143_8.p  CSR144_8.p  CSR148_8.p  CSR149_8.p  CSR151_8.p  CSR152_8.p  NUM647_8.p  NUM651_8.p  NUM652_8.p  NUM653_8.p  NUM654_8.p  NUM655_8.p  NUM656_8.p  NUM657_8.p  NUM658_8.p  NUM659_8.p  NUM662_8.p  NUM663_8.p  NUM664_8.p  NUM667_8.p  NUM670_8.p  NUM680_8.p  NUM681_8.p  NUM682_8.p  NUM687_8.p  NUM688_8.p  NUM691_8.p  NUM693_8.p  NUM695_8.p  NUM696_8.p  (+46 more)
TestFiles/FOOL/NewAsWeLearn/: foo_count_tfx.p  petar.p
